# AgentLow

./: .gitignore  README.md  pyproject.toml
plan/: description_plan.md  implementation_milestones.md  improvements_plan.md
zakon_agent/: main.py  orchestrator.py  registry.py  store.py
zakon_agent/agents/: sub_agent.py  temporary_agent.py
zakon_agent/tools/: fetch_zakon.py  structure_zakon.py  validate_url.py
